# tema

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  check.sh  ci-check.sh  random.cpp  setup-deps.sh  test_with_coverage.sh
.github/workflows/: check.yml  static_analysis.yml  tests.yml
.run/: Check.run.xml  check.run.xml  tema_algorithms_test.run.xml  tema_compiler_test.run.xml  tema_core_test.run.xml  test_integration_compile_modules.run.xml  test_integration_parse_modules.run.xml  test_tema_algorithms.run.xml  test_tema_compiler.run.xml  test_tema_core.run.xml  tidy.run.xml
cmake/: ConfigFlex.cmake  Coverage.cmake  Flags.cmake  MCGADeps.cmake  StaticAnalysis.cmake  Tema.cmake  XXD.cmake
modules/: propositional_logic.tema  set_theory.tema
scratch/: scratch_pad.cpp
src/: CMakeLists.txt  algorithms.h  config.h  expression.cpp  expression.h  module.cpp  module.h  print.cpp  print.h  relationship.h  scope.cpp  scope.h  statement.cpp  statement.h  statement_visitor.h  type_list.h  variable.cpp  variable.h
src/algorithms/: apply_vars.cpp  apply_vars.h  apply_vars_test.cpp  deduce.cpp  deduce.h  deduce_test.cpp  equals.cpp  equals.h  equals_test.cpp  match.cpp  match.h  match_test.cpp  print_ascii.cpp  print_ascii.h  print_utf8.cpp  print_utf8.h  print_utf8_test.cpp
src/compiler/: compile.cpp  compile.h  compile_test.cpp  flex_lexer.l  lexer.cpp  lexer.h  lexer_flex.l  lexer_test.cpp  parser.cpp  parser.h  parser_test.cpp  precompiled_module.cpp  precompiled_module.h  print_cxx.cpp  print_cxx.h  print_cxx_test.cpp  translate.cpp  translate.h  translate_test.cpp
src/core/: export.h  expression.cpp  expression.h  expression_test.cpp  module.cpp  module.h  module_test.cpp  relationship.cpp  relationship.h  relationship_test.cpp  scope.cpp  scope.h  scope_test.cpp  statement.cpp  statement.h  statement_test.cpp  variable.cpp  variable.h  variable_test.cpp
src/modules/: propositional_logic.cpp  propositional_logic.h  propositional_logic.tema
src/util/: cvref_same_as.h  overload.h  pack.h  temp_file.h  tpack.h
tests/: CMakeLists.txt  compile_modules.cpp  parse_modules.cpp  test_module.cpp  test_print.cpp  test_scope.cpp  test_statement.cpp
tests/algorithms/: test_apply_vars.cpp  test_deduce.cpp  test_equals.cpp  test_match.cpp  test_print_ascii.cpp  test_print_utf8.cpp
